<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_launcher"
    tools:context="walluiz.chaze.lukiles.duringPlay">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/label_question"
        android:textAlignment="center"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/label_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="THE QUESTION IS HERE"
        android:textAlignment="center"
        android:textSize="36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/label_answer"
        android:textAlignment="center"
        android:textSize="24dp"/>

    <Button
        android:id="@+id/button_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Answer 1"
        android:textAlignment="center"
        android:textSize="18dp" />
    <Button
        android:id="@+id/button_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Answer 2"
        android:textAlignment="center"
        android:textSize="18dp" />
    <Button
        android:id="@+id/button_answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Answer 3"
        android:textAlignment="center"
        android:textSize="18dp" />
    <Button
        android:id="@+id/button_answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Answer 4"
        android:textAlignment="center"
        android:textSize="18dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="THIS IS A COUNTDOWN"
            android:textAlignment="center"
            android:textSize="12dp" />
        <Button
            android:id="@+id/button_surrender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/label_surrender"
            android:textAlignment="center"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>
