<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_alt"
    tools:context="walluiz.chaze.lukiles.leaderboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/button_leaderboard"
        android:textAlignment="center"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/leaderboard_score_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 1"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 2"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 3"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 4"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 5"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 6"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 7"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 8"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 9"
        android:textAlignment="center"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/leaderboard_score_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="SCORE 10"
        android:textAlignment="center"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_reset"
            android:textAlignment="center"
            android:textSize="12dp" />
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_back"
            android:textAlignment="center"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>
